--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="121dp"
         android:layout_height="45dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Enter Principle ($):"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -38,7 +38,7 @@
         android:id="@+id/rateView"
         android:layout_width="121dp"
         android:layout_height="27dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:textColor="@color/black"
         android:text="Interest rate: 10%"
         android:textStyle="bold"
@@ -59,6 +59,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:textColor="@color/black"
         android:text="Select Loan Term"
         android:textStyle="bold"
@@ -108,6 +109,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:text="CALCULATE"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toStartOf="@+id/uninstall"
         app:layout_constraintHorizontal_bias="0.5"
@@ -131,9 +133,10 @@
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="36dp"
         android:text="Press CALCULATE for monthly payments."
+        android:textColor="@color/black"
+        android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/cal"
         app:layout_constraintTop_toBottomOf="@+id/cal" />
